--- a/style.css
+++ b/style.css
@@ -35,3 +35,13 @@ main{
     align-items: center;
     background: linear-gradient(rgb(210, 70, 93), blue);
 }
+header{
+    height: 100px;
+    display: flex;
+    align-items: center;
+    padding-left: 75px;
+    gap: 24;
+}
+header span{
+    font-weight: 600px;
+}
