--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     height: 100vh;
     display: flex;
     flex-direction: column;
-    
+    background: linear-gradient(pink, blue);
 }
 header{
     height: 100px;
@@ -33,7 +33,26 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(rgb(210, 70, 93), blue);
+}
+.background-logo {
+    position: absolute;
+    width: 100%;
+    max-height: 100%;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+}
+.text{
+    position: absolute;
+    color: aliceblue;
+    font-size: 2.5rem;
+    width: 240px;
+    transform: translateX(-100%);
+    text-align: start;
+    filter: drop-shadow(0 0 20px black);
 }
 header{
     height: 100px;
@@ -44,4 +63,7 @@ header{
 }
 header span{
     font-weight: 600px;
+}
+.jesus{
+    height: 85vh;
 }
